fix: Contrast ratio

--- a/stylesheets/components/_control.less
+++ b/stylesheets/components/_control.less
@@ -39,6 +39,12 @@
       transition: .2s ease color;
     }
   }
+
+  .custom_select_search {
+    .inp {
+      color: inherit !important;
+    }
+  }
 }
 
 .custom_select_all a {
