--- a/stylesheets/components/_icon.less
+++ b/stylesheets/components/_icon.less
@@ -5,14 +5,27 @@
   filter: invert(1);
 }
 
+.jqplot-seriespicker {
+  filter: invert();
+
+  .jqplot-seriespicker-popover {
+    filter: invert();
+  }
+}
 
 img[src*="plugins/Morpheus/images/logo-dark"],
 img[src*="plugins/Morpheus/icons/dist/devices"],
 img[src*="plugins/Morpheus/icons/dist/os/IOS.png"],
+img[src*="plugins/Morpheus/icons/dist/os/IPA.png"],
+img[src*="plugins/Morpheus/icons/dist/brand/Infinix.png"],
 img[src*="plugins/Morpheus/icons/dist/brand/Apple.png"] {
   filter: invert(1) !important;
 }
 
 .segmentationContainer ul.submenu > li span.compareSegment {
   filter: invert(1) !important;
+}
+
+.visits-live-launch-visitor-profile {
+  filter: invert(1);
 }
